adjust button styles
to match new designs with a different hover style for dark buttons

button-icon just handles styling the svg. it no longer chooses colors.
button-transparent takes care of the default green icon highlighting
so that the search icon can use colors from button-secondary.

--- a/assets/css/_picker_container.scss
+++ b/assets/css/_picker_container.scss
@@ -46,6 +46,7 @@
 }
 
 .m-picker-container__tab-button {
+  @include button-transparent;
   @include button-icon(0.9rem);
   font-size: 2rem;
   line-height: 1.5rem;
