--- a/assets/css/_route_ladder.scss
+++ b/assets/css/_route_ladder.scss
@@ -14,9 +14,11 @@
   text-align: center;
 
   .m-close-button {
+    height: 100%;
+    padding: 0.625rem;
     position: absolute;
-    right: 0.5rem;
-    top: 0.5rem;
+    right: 0rem;
+    top: 0;
   }
 }
 
