adjust button styles (#304)
* adjust button styles

to match new designs with a different hover style for dark buttons

button-icon just handles styling the svg. it no longer chooses colors.
button-transparent takes care of the default green icon highlighting
so that the search icon can use colors from button-secondary.

* make button click targets bigger

* make search button primary (dark) instead of secondary (green)

--- a/assets/css/_route_ladder.scss
+++ b/assets/css/_route_ladder.scss
@@ -14,9 +14,11 @@
   text-align: center;
 
   .m-close-button {
+    height: 100%;
+    padding: 0.625rem;
     position: absolute;
-    right: 0.5rem;
-    top: 0.5rem;
+    right: 0rem;
+    top: 0;
   }
 }
 
@@ -27,6 +29,7 @@
 
 .m-route-ladder__reverse {
   @include font-small;
+  @include button-transparent;
   @include button-icon(0.625rem);
   margin-top: 0.5rem;
 }
