--- a/assets/css/_picker_container.scss
+++ b/assets/css/_picker_container.scss
@@ -35,7 +35,6 @@
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
   left: $picker-width-narrow;
-  padding: 1.5rem 0.3rem;
   position: absolute;
   top: 1.625rem;
   width: fit-content;
@@ -46,9 +45,10 @@
 }
 
 .m-picker-container__tab-button {
+  @include button-transparent;
   @include button-icon(0.9rem);
   font-size: 2rem;
   line-height: 1.5rem;
   margin: 0;
-  padding: 0 0.375rem 0.5rem;
+  padding: 1.5rem 0.675rem 2rem;
 }
