--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -198,6 +198,19 @@ $color-stop-stroke: $black;
   }
 }
 
+@mixin button-text {
+  color: $color-button-secondary;
+  font-size: 0.8125rem;
+  font-weight: 500;
+  padding: 0;
+  text-decoration: none;
+
+  &:focus,
+  &:hover {
+    color: $color-primary;
+  }
+}
+
 // input styles
 
 select {
