--- a/assets/css/_search_page.scss
+++ b/assets/css/_search_page.scss
@@ -1,4 +1,5 @@
 .m-search-page {
+  display: flex;
   height: 100vh;
   width: 100vw;
 }
@@ -6,6 +7,7 @@
 .m-search-page__controls {
   background-color: $color-bg-base;
   display: flex;
+  flex: 1 0 auto;
   flex-direction: column;
   height: 100vh;
   padding: 1.5rem 1.1875rem;
@@ -16,5 +18,10 @@
   flex: 1 1 auto;
   overflow-y: scroll;
   padding-top: 1.5rem;
+  width: 100%;
+}
+
+.m-search-page__map {
+  height: 100vh;
   width: 100%;
 }
