--- a/assets/css/_search_results.scss
+++ b/assets/css/_search_results.scss
@@ -14,6 +14,7 @@
   background-color: $white;
   border-radius: 4px;
   box-shadow: $subtle-box-shadow;
+  cursor: pointer;
   margin-bottom: 1rem;
   padding: 1rem 1rem 0.5rem;
 
