--- a/assets/css/properties_panel/_header.scss
+++ b/assets/css/properties_panel/_header.scss
@@ -4,6 +4,11 @@
   .m-route-variant-name {
     @include font-header;
   }
+
+  .m-close-button {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .m-properties-panel__label {
@@ -49,12 +54,15 @@
   .on-time & {
     fill: $color-vehicle-ontime;
   }
+
   .early & {
     fill: $color-vehicle-early;
   }
+
   .late & {
     fill: $color-vehicle-late;
   }
+
   .off-course & {
     fill: $color-vehicle-off-course;
   }
