--- a/assets/css/_search_results.scss
+++ b/assets/css/_search_results.scss
@@ -18,6 +18,7 @@
   margin-bottom: 1rem;
   padding: 1rem 1rem 0.5rem;
 
+  &--selected,
   &:hover {
     background-color: $color-secondary-light;
 
