--- a/assets/css/_search_form.scss
+++ b/assets/css/_search_form.scss
@@ -1,8 +1,3 @@
-.m-search-form {
-  border-bottom: 1px solid $white;
-  width: 100%;
-}
-
 .m-search-form__row {
   display: flex;
 }
@@ -26,9 +21,9 @@
 
 .m-search-form__property-buttons {
   display: flex;
+  flex: 1 0 auto;
   list-style-type: none;
   margin-top: 0.75rem;
-  width: 100%;
 }
 
 .m-search-form__property-button {
