--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,5 @@
+$non-mobile-min-width: 768px;
+$mobile-max-width: $non-mobile-min-width - 1;
 $tab-bar-width: 3rem;
 $picker-width-narrow: 9.5rem;
 $picker-width-wide: $picker-width-narrow + 3.1;
