--- a/assets/css/_search_page.scss
+++ b/assets/css/_search_page.scss
@@ -23,13 +23,13 @@
       flex: 0 1 auto;
     }
 
-    .m-search-page__controls {
+    .m-search-page__input-and-results {
       flex: 0 1 auto;
     }
   }
 }
 
-.m-search-page__controls {
+.m-search-page__input-and-results {
   background-color: $color-bg-base;
   display: flex;
   flex: 0 0 auto;
