--- a/assets/css/_search_page.scss
+++ b/assets/css/_search_page.scss
@@ -4,29 +4,6 @@
   flex-direction: row;
   height: 100vh;
   overflow-y: hidden;
-
-  @media screen and (max-width: $mobile-max-width) {
-    flex-direction: column;
-  }
-}
-
-@media screen and (max-width: $mobile-max-width) {
-  .m-search-page--show-list .m-search-page__map {
-    // Needs to be hidden instead of not displayed so the map still gets drawn properly
-    position: absolute;
-    top: 100vh;
-  }
-
-  .m-search-page--show-map {
-    .m-search-display {
-      display: none;
-      flex: 0 1 auto;
-    }
-
-    .m-search-page__input-and-results {
-      flex: 0 1 auto;
-    }
-  }
 }
 
 .m-search-page__input-and-results {
@@ -36,13 +13,6 @@
   flex-direction: column;
   height: 100vh;
   width: 22rem;
-
-  @media screen and (max-width: $mobile-max-width) {
-    box-sizing: border-box;
-    flex: 1 1 auto;
-    height: auto;
-    width: auto;
-  }
 }
 
 .m-search-page__input,
@@ -59,10 +29,6 @@
   display: none;
   font-size: 0.875rem;
   margin: 0.5rem auto 0;
-
-  @media screen and (max-width: $mobile-max-width) {
-    display: block;
-  }
 }
 
 .m-search-display {
@@ -72,8 +38,42 @@
 
 .m-search-page__map {
   flex: 1 1 auto;
+}
 
-  @media screen and (max-width: $mobile-max-width) {
+@media screen and (max-width: $mobile-max-width) {
+  .m-search-page {
+    flex-direction: column;
+  }
+
+  .m-search-page--show-list .m-search-page__map {
+    // Needs to be hidden instead of not displayed so the map still gets drawn properly
+    position: absolute;
+    top: 100vh;
+  }
+
+  .m-search-page--show-map {
+    .m-search-display {
+      display: none;
+      flex: 0 1 auto;
+    }
+
+    .m-search-page__input-and-results {
+      flex: 0 1 auto;
+    }
+  }
+
+  .m-search-page__input-and-results {
+    box-sizing: border-box;
+    flex: 1 1 auto;
+    height: auto;
+    width: auto;
+  }
+
+  .m-search-page__toggle-mobile-display-button {
+    display: block;
+  }
+
+  .m-search-page__map {
     box-sizing: border-box;
     height: 50%;
     width: calc(100vw - 3rem);
