Move the close button up to the parent component

--- a/assets/css/properties_panel/_vehicle_properties_panel.scss
+++ b/assets/css/properties_panel/_vehicle_properties_panel.scss
@@ -1,7 +1,7 @@
 .m-vehicle-properties-panel {
   display: flex;
+  flex: 1 1 auto;
   flex-direction: column;
-  height: 100%;
 }
 
 .m-vehicle-properties-panel__location {
