--- a/assets/css/properties_panel/_ghost_properties_panel.scss
+++ b/assets/css/properties_panel/_ghost_properties_panel.scss
@@ -1,7 +1,7 @@
 .m-ghost-properties-panel {
   display: flex;
+  flex: 1 1 auto;
   flex-direction: column;
-  height: 100%;
 
   .m-properties-list {
     flex: 1 0 auto;
