Make a wrapper div to consolidate flex rules in parent component

--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -18,6 +18,10 @@
   border-top: 1px solid $color-rule;
 }
 
+.m-properties-panel__vehicle-or-ghost-panel {
+  flex: 1 1 auto;
+}
+
 .m-properties-panel__modal-overlay {
   background-color: $modal-overlay-color;
   height: 100%;
