--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -22,6 +22,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "properties_panel/ghost_properties_panel";
 @import "properties_panel/header";
 @import "properties_panel/headway_diagram";
+@import "properties_panel/navigate_button";
 @import "properties_panel/vehicle_properties_panel";
 @import "recent_searches";
 @import "route_ladder";
