--- a/assets/css/_search_page.scss
+++ b/assets/css/_search_page.scss
@@ -1,27 +1,88 @@
 .m-search-page {
   display: flex;
+  flex: 1 1 auto;
+  flex-direction: row;
   height: 100vh;
-  width: 100vw;
+  position: relative;
+  overflow-y: hidden;
 }
 
-.m-search-page__controls {
+.m-search-page__input-and-results {
   background-color: $color-bg-base;
   display: flex;
-  flex: 1 0 auto;
+  flex: 0 0 auto;
   flex-direction: column;
-  height: 100vh;
-  padding: 1.5rem 1.1875rem;
   width: 22rem;
+}
+
+.m-search-page__input,
+.m-search-display {
+  padding: 1.5rem 1.1875rem;
+}
+
+.m-search-page__input {
+  border-bottom: 1px solid $white;
+}
+
+.m-search-page__toggle-mobile-display-button {
+  @include button-text;
+  display: none;
+  font-size: 0.875rem;
+  margin: 0.5rem auto 0;
 }
 
 .m-search-display {
   flex: 1 1 auto;
   overflow-y: scroll;
-  padding-top: 1.5rem;
-  width: 100%;
 }
 
 .m-search-page__map {
-  height: 100vh;
-  width: 100%;
+  flex: 1 1 auto;
+  position: relative;
+}
+
+@media screen and (max-width: $mobile-max-width) {
+  .m-search-page {
+    flex-direction: column;
+  }
+
+  .m-search-page--show-list {
+    .m-search-page__input-and-results {
+      flex: 1 1 auto;
+      height: 100vh;
+      overflow: scroll;
+    }
+
+    .m-search-page__map {
+      // Needs to be hidden instead of not displayed so the map still gets drawn properly
+      position: absolute;
+      top: 100vh;
+    }
+  }
+
+  .m-search-page--show-map {
+    .m-search-page__input-and-results {
+      flex: 0 0 auto;
+      height: auto;
+    }
+
+    .m-search-display {
+      display: none;
+    }
+  }
+
+  .m-search-page__input-and-results {
+    box-sizing: border-box;
+    width: auto;
+  }
+
+  .m-search-page__toggle-mobile-display-button {
+    display: block;
+  }
+
+  .m-search-page__map {
+    box-sizing: border-box;
+    height: 75%;
+    width: calc(100vw - #{$tab-bar-width});
+  }
 }
