--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -9,6 +9,8 @@
 .m-vehicle-map__icon {
   path {
     fill: $color-primary;
+    stroke: $color-bg-base;
+    stroke-width: 2;
 
     &.on-time {
       fill: $color-vehicle-ontime;
