Display "SW-OFF" or "PULL-B" for vehicle icons
Define an "end of trip type" property on Vehicle.

--- a/assets/css/_vehicle_icon.scss
+++ b/assets/css/_vehicle_icon.scss
@@ -72,6 +72,10 @@
 .m-vehicle-icon--large {
   .m-vehicle-icon__label {
     @include font-header-big;
+
+    &--extended {
+      @include font-header-small;
+    }
   }
 
   .m-vehicle-icon__variant {
