--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -67,6 +67,11 @@ $color-stop-stroke: $black;
   font-weight: 700;
 }
 
+@mixin font-header-small {
+  font-size: 1rem;
+  font-weight: 700;
+}
+
 @mixin font-big {
   font-size: 1.25rem;
 }
