--- a/assets/css/_tab_bar.scss
+++ b/assets/css/_tab_bar.scss
@@ -1,7 +1,5 @@
 .m-tab-bar {
   background-color: $color-primary;
-  display: flex;
-  flex-direction: column;
   height: 100%;
   // Required for pinning to the left side of the screen on the tablets
   left: 0;
@@ -20,21 +18,18 @@
   }
 }
 
+.m-tab-bar__logo {
+  padding: 0.5rem 0.1rem 0;
+  width: 100%;
+}
+
 .m-tab-bar__links {
   margin-block-start: 0;
 }
 
-.m-tab-bar__logo,
 .m-tab-bar__link {
   display: block;
   text-align: center;
-}
-
-.m-tab-bar__logo {
-  padding: 0.5rem 0.1rem 0;
-}
-
-.m-tab-bar__link {
   padding: 0.5rem 0.5rem 0.25rem 0.5rem;
 
   &--active {
@@ -58,9 +53,9 @@
   }
 }
 
-.m-tab-bar__t-logo {
+.m-tab-bar__refresh {
   bottom: 0;
   padding: 0.5rem;
-  position: fixed;
-  width: $tab-bar-width - 1rem;
+  position: absolute;
+  width: 100%;
 }
