--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -10,6 +10,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "leaflet";
 
 @import "close_button";
+@import "disconnected_modal";
 @import "incoming_box";
 @import "ladder";
 @import "ladder_page";
