--- a/assets/css/_shuttle_map.scss
+++ b/assets/css/_shuttle_map.scss
@@ -1,7 +1,26 @@
+.m-shuttle-map {
+  height: 100%;
+  position: relative;
+  transition: $transition-slide;
+  width: 100%;
+
+  .m-picker-container {
+    z-index: 620;
+  }
+
+  .m-tab-bar.hidden + & {
+    margin-left: 0;
+  }
+
+  .m-tab-bar.visible + & {
+    margin-left: $tab-bar-width;
+  }
+}
+
 .m-shuttle-map__map {
-  height: 100vh;
-  position: fixed;
-  width: 100vw;
+  height: 100%;
+  position: absolute;
+  width: 100%;
 
   .m-vehicle-map__label.selected .m-vehicle-icon__label-background {
     fill: $color-secondary-medium;
