--- a/assets/css/_ladder_page.scss
+++ b/assets/css/_ladder_page.scss
@@ -1,10 +1,17 @@
 .m-ladder-page {
-  // leave space for the picker container tab, which is always visible
-  padding-left: 2rem;
+  box-sizing: border-box;
+  position: relative;
+  transition: $transition-slide;
 
-  transition: margin-left 0.2s ease-in-out;
+  .m-tab-bar.hidden + & {
+    margin-left: 0;
+    padding-left: 0;
+    width: 100%;
+  }
 
   .m-tab-bar.visible + & {
-    margin-left: $tab-bar-width + $picker-width-narrow;
+    margin-left: $tab-bar-width;
+    padding-left: $picker-width-narrow;
+    width: calc(100% - #{$tab-bar-width});
   }
 }
