--- a/assets/css/_tab_bar.scss
+++ b/assets/css/_tab_bar.scss
@@ -3,9 +3,9 @@
   height: 100%;
   // Required for pinning to the left side of the screen on the tablets
   left: 0;
-  position: fixed;
+  position: absolute;
   top: inherit;
-  transition: left 0.2s ease-in-out;
+  transition: $transition-slide;
   width: $tab-bar-width;
   z-index: 2;
 
