--- a/assets/css/properties_panel/_block_waiver_banner.scss
+++ b/assets/css/properties_panel/_block_waiver_banner.scss
@@ -1,28 +1,28 @@
-.m-block-waiver {
+.m-block-waiver-banner {
   background-color: $color-secondary-light;
   border: 1px solid $color-secondary-dark;
   padding: 1rem 1rem 1rem 2rem;
 }
 
-.m-block-waiver__header {
+.m-block-waiver-banner__header {
   display: flex;
   flex-direction: row;
   margin-left: -1.2rem;
 }
 
-.m-block-waiver__alert-icon {
+.m-block-waiver-banner__alert-icon {
   display: block;
   fill: $black;
   margin-right: 0.3rem;
   width: 15px;
 }
 
-.m-block-waiver__title {
+.m-block-waiver-banner__title {
   @include font-body;
   margin-bottom: 0.8rem;
 }
 
-.m-block-waiver__details {
+.m-block-waiver-banner__details {
   border-spacing: 0;
 
   td {
@@ -30,14 +30,14 @@
   }
 }
 
-.m-block-waiver__detail-label {
+.m-block-waiver-banner__detail-label {
   @include font-label;
   margin-bottom: 0.5rem;
   text-align: left;
   width: 7rem;
 }
 
-.m-block-waiver__detail-value {
+.m-block-waiver-banner__detail-value {
   @include font-body;
   margin-bottom: 1rem;
 
@@ -46,9 +46,9 @@
   }
 }
 
-.m-block-waiver__detail-label--end-time,
-.m-block-waiver__detail-value--end-time {
-  .m-block-waiver--current & {
+.m-block-waiver-banner__detail-label--end-time,
+.m-block-waiver-banner__detail-value--end-time {
+  .m-block-waiver-banner--current & {
     color: $color-font-dark;
     font-weight: 700;
   }
