Add tooltip for timepoints (#452)

--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -40,6 +40,7 @@
 
 .m-ladder__timepoint-name {
   @include font-timepoint;
+  cursor: pointer;
 }
 
 .m-ladder__vehicle {
@@ -90,6 +91,7 @@
   &.early {
     stroke: $color-vehicle-early;
   }
+
   &.late {
     stroke: $color-vehicle-late;
   }
