Display block waivers in vehicle and ghost properties panels
Put behind a feature flag.

Import block waiver data for Vehicles and Ghosts.

Highlight vehicles on the route ladder that have block waivers. This is
quick & dirty styling not based on any design. We'll improve this in
future PRs.

--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -73,6 +73,10 @@
       fill: $color-secondary-medium;
     }
   }
+
+  &--with-block-waivers {
+    stroke: $black;
+  }
 }
 
 .m-ladder__vehicle-label-background {
