--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -19,6 +19,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "picker_container";
 @import "properties_list";
 @import "properties_panel";
+@import "properties_panel/block_waivers";
 @import "properties_panel/close_button";
 @import "properties_panel/ghost_properties_panel";
 @import "properties_panel/header";
