--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -11,6 +11,7 @@ $color-component-light: $color-bg-medium;
 $color-component-medium: #8b8d91;
 $color-component-dark: #1c1e23;
 $color-component-red: #e45d32;
+$color-component-highlight: #e7ff36;
 
 $color-primary: #586f7c;
 $color-primary-dark: #465863;
