--- a/assets/css/_route_ladders.scss
+++ b/assets/css/_route_ladders.scss
@@ -11,7 +11,7 @@
     [m-incoming-box] max-content;
   height: 100%;
   max-width: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
   padding: 1rem;
   // leave space for the picker container tab, which is always visible
   padding-left: 3rem;
