Block waiver icon on ladder (#490)
* alertIcon on vehicleIcon

* move currentFuturePastType to models/blockWaiver.ts

* move hasBlockWaiver from vehicle.ts to blockWaiver.ts

* show block waiver alert icon on ladder

--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -74,14 +74,42 @@
     }
   }
 
-  &--with-block-waivers {
-    stroke: $black;
-  }
-}
+  &--block-waiver-black {
+    .c-icon-alert-circle__outline,
+    .c-icon-alert-circle__exclamation-point {
+      fill: $color-bg-base;
+    }
 
-.m-ladder__vehicle-label-background {
-  fill: $color-bg-base;
-  stroke: none;
+    .c-icon-alert-circle__fill {
+      fill: $color-component-dark;
+    }
+  }
+
+  &--block-waiver-grey {
+    .c-icon-alert-circle__outline,
+    .c-icon-alert-circle__exclamation-point {
+      fill: $color-bg-base;
+    }
+
+    .c-icon-alert-circle__fill {
+      fill: $color-component-medium;
+    }
+  }
+
+  &--block-waiver-highlighted {
+    .c-icon-alert-circle__outline,
+    .c-icon-alert-circle__exclamation-point {
+      fill: $color-component-dark;
+    }
+
+    .c-icon-alert-circle__fill {
+      fill: $color-component-highlight;
+    }
+
+    .m-vehicle-icon__label-background {
+      fill: $color-component-highlight;
+    }
+  }
 }
 
 .m-ladder__vehicle-label-text {
