--- a/assets/css/properties_panel/_ghost_properties_panel.scss
+++ b/assets/css/properties_panel/_ghost_properties_panel.scss
@@ -7,3 +7,37 @@
     flex: 1 0 auto;
   }
 }
+
+.m-ghost-properties-panel__no-waiver-banner {
+  @include font-body;
+  background-color: transparentize($color-component-highlight, 0.6);
+  border: 1px solid $color-component-highlight;
+  font-weight: 400;
+  padding: 1rem 1rem 1rem 2rem;
+}
+
+.m-ghost-properties-panel__no-waiver-banner-header {
+  display: flex;
+  flex-direction: row;
+  margin-left: -1.2rem;
+}
+
+.m-ghost-properties-panel__no-waiver-banner-alert-icon {
+  display: block;
+  margin-right: 0.3rem;
+  width: 15px;
+
+  .c-icon-alert-circle__fill {
+    fill: $color-component-highlight;
+  }
+
+  .c-icon-alert-circle__outline,
+  .c-icon-alert-circle__exclamation-point {
+    fill: $color-component-dark;
+  }
+}
+
+.m-ghost-properties-panel__no-waiver-banner-title {
+  font-weight: 500;
+  margin-bottom: 0.8rem;
+}
