--- a/assets/css/properties_panel/_block_waiver_banner.scss
+++ b/assets/css/properties_panel/_block_waiver_banner.scss
@@ -101,3 +101,33 @@
     color: $color-font-dark;
   }
 }
+
+.m-block-waiver-banner__reason-button {
+  @include button-text;
+
+  .m-block-waiver-banner--future &,
+  .m-block-waiver-banner--past & {
+    color: $color-font-grey;
+
+    &:focus,
+    &:hover {
+      color: $color-primary;
+    }
+  }
+}
+
+.m-block-waiver-banner__reason-button-icon {
+  fill: $color-button-secondary;
+  display: inline-block;
+  width: 9px;
+
+  .m-block-waiver-banner__reason-button:focus &,
+  .m-block-waiver-banner__reason-button:hover & {
+    fill: $color-primary;
+  }
+
+  .m-block-waiver-banner--future &,
+  .m-block-waiver-banner--past & {
+    fill: $color-font-grey;
+  }
+}
