--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -12,6 +12,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "close_button";
 @import "data_status_banner";
 @import "disconnected_modal";
+@import "icon_alert_circle";
 @import "incoming_box";
 @import "ladder";
 @import "ladder_page";
