--- a/assets/css/_icon_alert_circle.scss
+++ b/assets/css/_icon_alert_circle.scss
@@ -20,6 +20,17 @@
   }
 }
 
+.c-icon-alert-circle--grey-on-grey {
+  .c-icon-alert-circle__outline,
+  .c-icon-alert-circle__exclamation-point {
+    fill: $color-bg-medium;
+  }
+
+  .c-icon-alert-circle__fill {
+    fill: $color-component-medium;
+  }
+}
+
 .c-icon-alert-circle--highlighted {
   .c-icon-alert-circle__outline,
   .c-icon-alert-circle__exclamation-point {
