--- a/assets/css/_incoming_box.scss
+++ b/assets/css/_incoming_box.scss
@@ -22,8 +22,17 @@
   &.selected {
     background-color: $color-secondary-medium;
   }
+
+  .c-icon-alert-circle {
+    margin-bottom: 2px;
+    width: 10px;
+  }
+}
+
+.m-incoming-box__vehicle-icon {
+  margin-right: 0.25rem;
 }
 
 .m-incoming-box__vehicle-label {
-  margin-left: 0.5rem;
+  margin-left: 0.25rem;
 }
