Add "New" indicator to search result cards
For buses that have logged in within the last 30 minutes.

--- a/assets/css/_properties_list.scss
+++ b/assets/css/_properties_list.scss
@@ -28,5 +28,9 @@
   .m-properties-list__property--last-login & {
     color: $color-font-grey;
     font-size: 0.75rem;
+
+    .m-search-results__card--new & {
+      color: $color-secondary-dark;
+    }
   }
 }
