Display a page-specific Appcue when you click help
Remove About page and move the "?" button to the bottom to be the new
help button.

--- a/assets/css/_tab_bar.scss
+++ b/assets/css/_tab_bar.scss
@@ -53,9 +53,14 @@
   }
 }
 
-.m-tab-bar__refresh {
+.m-tab-bar__bottom-buttons {
   bottom: 0;
-  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
   position: absolute;
   width: 100%;
+
+  button {
+    padding: 0.5rem;
+  }
 }
