--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -51,4 +51,13 @@
     stroke: $black;
     stroke-width: 1.8;
   }
+
+  .m-vehicle-map--auto-centering & a {
+    background-color: $color-button-disabled;
+    color: $color-font-grey;
+
+    path {
+      stroke: $color-font-grey;
+    }
+  }
 }
