--- a/assets/css/_leaflet.scss
+++ b/assets/css/_leaflet.scss
@@ -2,3 +2,8 @@
   width: 100%;
   height: 100%;
 }
+
+.leaflet-bar.leaflet-control-zoom .leaflet-disabled {
+  background-color: $color-button-disabled;
+  color: $color-font-grey;
+}
