--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -48,7 +48,7 @@
 .m-vehicle-map__recenter-button {
   path {
     fill: none;
-    stroke: $black;
+    stroke: $color-button-secondary;
     stroke-width: 2;
   }
 
