--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -48,7 +48,17 @@
 .m-vehicle-map__recenter-button {
   path {
     fill: none;
-    stroke: $black;
-    stroke-width: 1.8;
+    stroke: $color-button-secondary;
+    stroke-width: 2;
+  }
+
+  .m-vehicle-map-state--auto-centering + .m-vehicle-map & a {
+    background-color: $color-button-disabled;
+    color: $color-font-grey;
+    cursor: default;
+
+    path {
+      stroke: $color-font-grey;
+    }
   }
 }
