--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -34,6 +34,16 @@
   }
 }
 
+.m-vehicle-map__train-icon {
+  fill: $white;
+  stroke: $color-component-dark;
+  stroke-width: 2;
+
+  svg {
+    overflow: visible;
+  }
+}
+
 .m-vehicle-map__route-shape:hover {
   stroke-opacity: 1;
 }
