Add 3 tabs to the properties panel
Only when not a shuttle. Shuttles do not have run or block views, so
should not have any tabs.

--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -13,8 +13,8 @@
   z-index: 1001;
 }
 
-.m-properties-panel .m-properties-list {
-  border-top: 1px solid $color-rule;
+.m-properties-panel .m-properties-panel__header {
+  border-bottom: 1px solid $color-rule;
 }
 
 .m-properties-panel__modal-overlay {
