--- a/assets/css/properties_panel/_ghost_properties_panel.scss
+++ b/assets/css/properties_panel/_ghost_properties_panel.scss
@@ -12,6 +12,7 @@
   @include font-body;
   background-color: transparentize($color-component-highlight, 0.6);
   border: 1px solid $color-component-highlight;
+  border-bottom: 1px solid $color-rule;
   font-weight: 400;
   padding: 1rem 1rem 1rem 2rem;
 }
