Switch away from deprecated Phoenix-specific assigns
Instead of :view_module and :view_template use view_module(@conn) and
view_template(@conn).

See:
https://github.com/phoenixframework/phoenix_html/blob/master/CHANGELOG.md#v2142-2020-04-30

--- a/lib/skate_web/templates/layout/app.html.eex
+++ b/lib/skate_web/templates/layout/app.html.eex
@@ -30,7 +30,7 @@
 
   <body>
     <main role="main" class="container">
-      <%= render @view_module, @view_template, assigns %>
+      <%= render view_module(@conn), view_template(@conn), assigns %>
     </main>
     <script type="text/javascript" src="<%= static_href.(@conn, "/js/app.js") %>"></script>
     <%= render "_drift.html" %>
