--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -16,6 +16,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "incoming_box";
 @import "ladder";
 @import "ladder_page";
+@import "minischedule";
 @import "page";
 @import "picker_container";
 @import "properties_list";
