show trip details

--- a/assets/css/_minischedule.scss
+++ b/assets/css/_minischedule.scss
@@ -32,6 +32,10 @@
   flex: 1 1 auto;
 }
 
+.m-minischedule__headsign {
+  font-weight: bold;
+}
+
 .m-minischedule__right-text {
   flex: 0 0 auto;
 }
