--- a/assets/css/_minischedule.scss
+++ b/assets/css/_minischedule.scss
@@ -22,7 +22,8 @@
     padding-top: 0;
     padding-bottom: 0.25rem;
 
-    .m-minischedule__left-text, .m-minischedule__right-text {
+    .m-minischedule__left-text,
+    .m-minischedule__right-text {
       border-top: 1px solid $color-component-light;
       padding-top: 0.25rem;
     }
