--- a/assets/css/_minischedule.scss
+++ b/assets/css/_minischedule.scss
@@ -1,5 +1,5 @@
 .m-minischedule__header {
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .m-minischedule__header-label {
@@ -9,13 +9,15 @@
 
 .m-minischedule__run-header {
   background-color: $color-bg-light;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 
 .m-minischedule__row {
   border-top: 1px solid $color-component-light;
   display: flex;
-  padding: 0.5rem 0 0.5rem 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-top: 0.5rem;
 
   &.m-minischedule__layover-row {
     border-top-style: none;
@@ -54,7 +56,7 @@
 
 .m-minischedule__right-text {
   flex: 0 0 auto;
-  padding-right: 0.5rem;
+  padding-right: 1rem;
 }
 
 .m-minischedule__piece-rows {
