fixup refactor current classes

--- a/assets/css/_minischedule.scss
+++ b/assets/css/_minischedule.scss
@@ -92,38 +92,20 @@
   }
 }
 
-.m-minischedule__row--current-trip {
-  &-early {
+.m-minischedule__row--current {
+  &.early {
     background-color: $color-vehicle-early;
   }
 
-  &-ghost {
+  &.ghost {
     background-color: $color-secondary-medium;
   }
 
-  &-late {
+  &.late {
     background-color: $color-vehicle-late;
   }
 
-  &-on-time {
-    background-color: $color-vehicle-ontime;
-  }
-}
-
-.m-minischedule__row--current-layover {
-  &-early {
-    background-color: $color-vehicle-early;
-  }
-
-  &-ghost {
-    background-color: $color-secondary-medium;
-  }
-
-  &-late {
-    background-color: $color-vehicle-late;
-  }
-
-  &-on-time {
+  &.on-time {
     background-color: $color-vehicle-ontime;
   }
 }
