--- a/assets/css/_minischedule.scss
+++ b/assets/css/_minischedule.scss
@@ -76,6 +76,13 @@
       transform: translateX(-50%);
       width: 0.375rem;
     }
+
+    &.m-minischedule__row--current {
+      &::before,
+      &::after {
+        left: 1.25rem;
+      }
+    }
   }
 
   .m-minischedule__row:not(:first-child) {
@@ -96,7 +103,10 @@
 }
 
 .m-minischedule__row--current {
+  border-left-style: solid;
+  border-left-width: 0.5rem;
   font-weight: bold;
+  padding-left: 0.5rem;
 
   svg {
     stroke: white;
@@ -105,6 +115,7 @@
 
   &.early {
     background-color: $color-vehicle-early;
+    border-left-color: purple;
 
     svg {
       fill: $color-vehicle-early;
@@ -113,6 +124,7 @@
 
   &.ghost {
     background-color: $color-secondary-medium;
+    border-left-color: purple;
 
     svg {
       fill: $color-secondary-medium;
@@ -121,6 +133,7 @@
 
   &.late {
     background-color: $color-vehicle-late;
+    border-left-color: purple;
 
     svg {
       fill: $color-vehicle-late;
@@ -129,6 +142,7 @@
 
   &.on-time {
     background-color: $color-vehicle-ontime;
+    border-left-color: purple;
 
     svg {
       fill: $color-vehicle-ontime;
