--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -40,8 +40,11 @@ $color-rule: $color-component-light;
 $color-vehicle-normal: $color-component-medium;
 $color-vehicle-normal-line: $color-component-light;
 $color-vehicle-ontime: #8bcf00;
+$color-vehicle-ontime-light: #e8f6cd;
 $color-vehicle-late: #46a5e7;
+$color-vehicle-late-light: #b5dbf6;
 $color-vehicle-early: $color-component-red;
+$color-vehicle-early-light: #f5bfad;
 $color-vehicle-ghost: $white;
 $color-vehicle-ghost-border: $color-component-medium;
 $color-vehicle-nonrevenue: #8f7ed6;
