--- a/assets/css/_minischedule.scss
+++ b/assets/css/_minischedule.scss
@@ -12,6 +12,16 @@
   padding: 0.5rem 1rem;
 }
 
+.m-minischedule__duty-details {
+  background-color: $color-secondary-light;
+  padding: 0.5rem 1rem;
+
+  .m-minischedule__header-label {
+    display: inline-block;
+    width: 40%;
+  }
+}
+
 .m-minischedule__row {
   border-top: 1px solid $color-component-light;
   display: flex;
